User can login now. Near users are found as expected.

--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.11",
     "mongoose-geojson-schema": "^2.1.2",
+    "request": "^2.85.0",
     "socket.io": "^2.0.4"
   }
 }
